--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/gradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -32,7 +33,8 @@
 
         <Button
             android:id="@+id/go"
-            android:layout_width="wrap_content"
+            style="@style/blackbtn"
+            android:layout_width="57dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/enterAddress"
             android:layout_centerHorizontal="true"
