--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_below="@+id/linearLayout1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/empty"
+        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/printedDirToScreen"
         android:layout_below="@+id/printedDirToScreen"
-        android:text="@string/empty"
+        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/printedDistToScreen"
         android:layout_below="@+id/printedDistToScreen"
-        android:text="@string/empty"
+        android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
