--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,6 +11,20 @@
        <item name="android:background">@drawable/blackbtn</item>
        <item name="android:padding">10dip</item>
    </style>
+   
+
+<style name="orangebtn" parent="@android:style/Widget.Button">
+       <item name="android:textSize">15sp</item>
+       <item name="android:textStyle">bold</item>
+       <item name="android:textColor">#FFFFFF</item>
+       <item name="android:gravity">center</item>
+       <item name="android:shadowColor">#000000</item>
+       <item name="android:shadowDx">1</item>
+       <item name="android:shadowDy">1</item>
+       <item name="android:shadowRadius">0.6</item>
+       <item name="android:background">@drawable/orangebtn</item>
+       <item name="android:padding">10dip</item>
+   </style>
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
